fix: counter-card z-index increase

--- a/css/style.css
+++ b/css/style.css
@@ -5806,6 +5806,7 @@ body.admin-bar .header-menu-area.sticky_menu {
   width: 100%;
   height: 100%;
   opacity: 0.9;
+  z-index: 0;
 }
 @media (min-width: 1450px) {
   .counter-area .side-image {
@@ -6032,6 +6033,8 @@ body.admin-bar .header-menu-area.sticky_menu {
   display: flex;
   gap: 17px;
   align-items: center;
+  position: relative;
+  z-index: 10;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .counter-card {
