--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -18,6 +18,7 @@
             width: 100%;
             height: 100%;
             opacity: 0.9;
+            z-index: 0;
         }
     }
     .side-image {
@@ -265,6 +266,8 @@
     display: flex;
     gap: 17px;
     align-items: center;
+    position: relative;
+    z-index: 10;
     @include sm {
         width: 100%;
         justify-content: space-between;
